fixed bug on mobile backdrop backdrop wasn't displaying correctly on landscape

--- a/src/components/login-view/login-view.scss
+++ b/src/components/login-view/login-view.scss
@@ -3,10 +3,10 @@
     background-image:linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.6)), url('../images/movie-poster-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100%;
     width: 100%;
-    height: 100vh;
     width: 100vw;
+    height: 1000px;
+ 
 }
 
 
